--- a/index.html
+++ b/index.html
@@ -5,17 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/main.css">
-    <title>Document</title>
+    <title>Wheels on the Ground</title>
 </head>
 <header>
+    <!---Header--->
+    <div class="header">
 
+    </div>
 </header>
 <body>
-    <footer>
+    <!---Intro Paragraph--->
+    <div class="intro">
 
+    </div>
+    <!---Pick your Park--->
+    <div class="parkSection">
+
+    </div>
+    <!---Pick your Eateries--->
+    <div class="eateriesSection">
+
+    </div>
+    <!---Pick your Bizzare--->
+    <div class="bizzareSection">
+
+    </div>
+
+    <!---Aside--->
+    <aside>
+        <div class="itinerary">
+
+        </div>
+    </aside>
+
+    <!---Footer--->   
+    <footer>
+        <div class="footer">
+        <p>&copy; 2021 King Canyon Folks</p>
+        </div>
     </footer>
     <script type="module" src="./scripts/main.js"></script>
-
 
 </body>
 </html>
