added Bizarre attraction modules, changed name of class for bizarre attractions on index

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="eateriesSection">
 
     </div>
-    <!---Pick your Bizzare--->
-    <div class="bizzareSection">
+    <!---Pick your Bizarre--->
+    <div class="bizarreSection">
 
     </div>
 
