adding eatery js files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     </div>
     <!---Pick your Eateries--->
-    <div class="eateriesSection">
+    <div class="eaterySection">
 
     </div>
     <!---Pick your Bizzare--->
