more js additions

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </div>
     <!---Pick your Park--->
     <div class="parkSection">
+        <select class="parkDropdown">
+            <option value="">select Park</option>
+        </select>
 
     </div>
     <!---Pick your Eateries--->
