got dropdown for bizarre attractions to render, also added comments to help anyone understand what the code was doing

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     </div>
     <!---Pick your Bizarre--->
     <div class="bizarreSection">
+        <select class="bizarreDropdown">
+            <option value="">Select Bizarre Attraction</option>
+        </select>
 
     </div>
 
