adding in dropdown

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </div>
     <!---Pick your Eateries--->
     <div class="eaterySection">
-
+        <select class="eaterySection"></select>
+        <input type="text" id="eateryDropdown" placeholder="Search by Eatery..." title="Type in Eatery">
     </div>
     <!---Pick your Bizzare--->
     <div class="bizzareSection">
