adding weatherprovider.js

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <!---Aside--->
     <aside>
         <div class="itinerary">
+            <div id="weather">
+
+            </div>
 
         </div>
     </aside>
