started work on event listener

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
 </header>
 <body>
+    <main class="main">
     <!---Intro Paragraph--->
     <div class="intro">
 
@@ -28,7 +29,7 @@
     </div>
     <!---Pick your Bizarre--->
     <div class="bizarreSection">
-        <select class="bizarreDropdown">
+        <select id="bizarreDropdown">
             <option value="">Select Bizarre Attraction</option>
         </select>
 
@@ -44,9 +45,10 @@
     <!---Footer--->   
     <footer>
         <div class="footer">
-        <p>&copy; 2021 King Canyon Folks</p>
+        <p>&copy; 2021 Kings Canyon Folks</p>
         </div>
     </footer>
+    </main>
     <script type="module" src="./scripts/main.js"></script>
 
 </body>
