--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
     <!---Aside--->
     <aside>
         <div class="itinerary">
+            <div>
+            <div id="park-itinerary"></div>
             <div id="weather">
+            <div id="bizarre-itinerary"></div>
+            <div id="eatery-itinerary"></div>
+            <button class="save">Save Itinerary</button>
+            </div>
 
             </div>
 
