--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
         </select>
     </div>
     <!---Pick your Bizarre--->
-    <div class="bizarreSection">
+    <div class="bizarreSectionFlex">
         <select id="bizarreDropdown">
             <option value="">Select Bizarre Attraction</option>
         </select>
+        <div id="bizarreSection">
+
+        </div>
 
     </div>
 
