--- a/index.html
+++ b/index.html
@@ -29,14 +29,25 @@
                     to do is add a park, eating and attraction options to your itinerary, then go on your adventure!
                 </h3>
             </div>
-            <!---Pick your Park--->
-            <div class="parkSection">
 
-            </div>
             <!---Pick your Park--->
             <div class="parkSection">
                 <select class="parkDropdown">
-                    <option value="">select Park</option>
+                    <option value="">Select Park</option>
+                </select>
+
+            </div>
+            <!---Pick your Park--->
+            <div class="eaterySection">
+                <select class="eateryDropdown">
+                    <option value="">Select Eatery</option>
+                </select>
+
+            </div>
+            <!---Pick your Park--->
+            <div class="bizarreSection">
+                <select class="bizarreDropdown">
+                    <option value="">Select Bizarre Attraction </option>
                 </select>
 
             </div>
