playing with event tags

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!---Pick your Park--->
             <div class="eaterySection">
                 <select class="eateryDropdown">
-                    <option value="">Select Eatery</option>
+                    <option id="search">Select Eatery</option>
                 </select>
 
             </div>
