selecting a bizarre attraction will now populate the DOM with correct attraction card

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="bizarreHeader">
                     <div class="bizarreTitle">PICK YOUR BIZARRE ATTRACTION</div>
                     <div class="bizarreSelect">
-                        <select class="bizarreDropdown">
+                        <select id="bizarreDropdown">
                             <option value="">Select Bizarre Attraction </option>
                         </select>
                     </div>
