save point to fetch teammate branch

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="bizarreCard">
                     <div class="bizarreDetail"></div>
-                    <button type="button" class="addButton">Add to Itinerary</button>
+                    <button type="button" class="addBizarreButton">Add to Itinerary</button>
                 </div>
             </div>
         </div>
@@ -97,8 +97,11 @@
                     <h4><u>Your Eatery:</u></h4>
                 </div>
 
-                <div id="bizarreAside">
+                <div>
                     <h4><u>Your Bizarre Attraction:</u></h4>
+                    <div  id="bizarreAside">
+
+                    </div>
                 </div>
 
                 <button type="button" id="saveButton">Save Itinerary</button>
