tweaking some of the setup

--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
                     <div class="eateryTitle">PICK YOUR EATERY</div>
                     <div class="eaterySelect">
                         <select id="eateryDropdown">
-                            <option id="search">Select Eatery</option>
+                            <option id="search" selected disabled hidden>Select Eatery</option>
                         </select>
                     </div>
                 </div>
                 <div class="eateryCard">
                     <div class="eateryDetail"></div>
+                        <h2>STEP 2: Select your Eatery and add to your itinerary.</h2>
                     <button type="button" class="eateryButton">Add to Itinerary</button>
                 </div>
             </div>
