Post object, save button disable & event handler

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h2 class="itineraryHeader">YOUR ITINERARY</h2>
                 <form class="form">
                     <label for="nameBox">Name Itinerary:</label>
-                    <input id="nameBox" type="text" class="nameBox">
+                    <input id="nameBox" name="nameBox" type="text" class="nameBox">
                 </form>
 
                 <div id="parkAside">
