--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="parkCard">
                     <div class="parkDetail"></div>
-                    <button type="button" class="addButton">Add to Itinerary</button>
+                    <button type="button" class="addParkButton">Add to Itinerary</button>
                 </div>
             </div>
             <!---Pick your Eatery--->
