setting up more details button

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 </div>
                 <div class="bizarreCard">
                     <div class="bizarreDetail"></div>
+                    <button type="button" class="moreBizarreDetails">More Details</button>
                     <button type="button" class="addBizarreButton">Add to Itinerary</button>
                 </div>
             </div>
