save point to fetch teammate branch

--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
                 </div>
                 <div class="bizarreCard">
                     <div class="bizarreDetail"></div>
-                    <button type="button" class="moreBizarreDetails">More Details</button>
+                    <button type="button" id="moreBizarreDetails">More Details</button>
+                    <div class="detailsPopUp" id="bizarreModal">
+                        <div class="bizarreDetailsTarget">
+                            <span class="close">&times;</span>
+                        </div>
+                    </div>
                     <button type="button" class="addBizarreButton">Add to Itinerary</button>
                 </div>
             </div>
