dialog box for more details button working

--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
                     <div class="bizarreDetail"></div>
                     <button type="button" id="moreBizarreDetails">More Details</button>
                     <div class="detailsPopUp" id="bizarreModal">
-                        <div class="bizarreDetailsTarget">
-                            <span id="close">&times;</span>
+                        <div class="modal-content">
+                            <span id="close">Close &times;</span>
+                            <div class="bizarreDetailsTarget">
+                                
+                            </div>
                         </div>
                     </div>
                     <button type="button" class="addBizarreButton">Add to Itinerary</button>
