more details for park data working

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
                 </div>
                 <div class="parkCard">
                     <div class="parkDetail"></div>
+                    <button type="button" id="moreParkDetails">More Details</button>
+                    <div class="detailsPopUp" id="parkModal">
+                        <div class="modal-content">
+                            <span id="close">Close &times;</span>
+                            <div class="parkDetailsTarget">
+                                
+                            </div>
+                        </div>
+                    </div>
                     <button type="button" class="addParkButton">Add to Itinerary</button>
                 </div>
             </div>
@@ -94,8 +103,11 @@
                     <input id="nameBox" name="nameBox" type="text" class="nameBox">
                 </form>
 
-                <div id="parkAside">
+                <div>
                     <h4><u>Your Park:</u></h4>
+                    <div id ="parkAside">
+
+                    </div>
                 </div>
 
                 <div id="weather">
