getting popup to work

--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
                 </div>
                 <div class="eateryCard">
                     <div class="eateryDetail"></div>
+                    <button type="button" id="moreEateryDetails">More Details</button>
+                    <div class="eateryDetailsPopUp" id="eateryModal">
+                        <div class="eateryModalContent">
+                            <span id="eateryClose"> &times;</span>
+                            <div class="eateryDetailsTarget">
+                                
+                            </div>
+                        </div>
+                    </div>
                     <button type="button" class="eateryButton">Add to Itinerary</button>
                 </div>
             </div>
@@ -75,7 +84,7 @@
                     <button type="button" id="moreBizarreDetails">More Details</button>
                     <div class="detailsPopUp" id="bizarreModal">
                         <div class="modal-content">
-                            <span id="close">Close &times;</span>
+                            <span id="close"> &times;</span>
                             <div class="bizarreDetailsTarget">
                                 
                             </div>
