more details button is working

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <div class="parkCard">
                     <div class="parkDetail"></div>
                     <button type="button" id="moreParkDetails">More Details</button>
-                    <div class="detailsPopUp" id="parkModal">
-                        <div class="modal-content">
-                            <span id="close">Close &times;</span>
+                    <div class="parkDetailsPopUp" id="parkModal">
+                        <div class="parkModalContent">
+                            <span id="parkClose"> &times;</span>
                             <div class="parkDetailsTarget">
                                 
                             </div>
