--- a/index.html
+++ b/index.html
@@ -120,8 +120,11 @@
                     </div>
                 </div>
 
-                <div id="weather">
+                <div>
                     <h4><u>Upcoming Weather Report:</u></h4>
+                    <div id="weather"> 
+                        
+                    </div>
                 </div>
 
                 <div>
