css padding on cards and aside, fixed park header in aside as well

--- a/index.html
+++ b/index.html
@@ -113,11 +113,9 @@
                     <input id="nameBox" name="nameBox" type="text" class="nameBox">
                 </form>
 
-                <div>
+                <div id="parkAsideCard">
                     <h4><u>Your Park:</u></h4>
-                    <div id ="parkAside">
-
-                    </div>
+                    <div id ="parkAside"></div>
                 </div>
 
                 <div id="weather">
