tweaking the Eatery data and html copy

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="content">
             <!---Intro Paragraph--->
             <div class="intro">
-                <h3>Welcome to wheels on the ground! Our goal is to make traveling to national parks accessible for
+                <h3>Welcome to Wheels on the Ground. Our goal is to make traveling to national parks accessible for
                     everyone. This tool allows you to plan your trip based on handicap-friendly features. All you need
                     to do is add a park, a place to eat and an attraction to visit to your itinerary, then go on your
                     adventure!
@@ -109,7 +109,7 @@
                     <button type="button" class="addBizarreButton">Add to Itinerary</button>
                 </div>
                 <div class="detailInfo">
-                    <h2> More info on Accessibility in Parks</h2>
+                    <h2> More information on Accessibility in Parks</h2>
                     <h3>Access Pass</h3>
                     <p>The Access Pass is a FREE, lifetime pass available to United States citizens or permanent residents, regardless of age, that have a permanent disability. The pass may be obtained two ways: (1) at a federal recreation site where entrance or standard amenity fees are charged; or (2) through the mail. You just need to provide the following information:
                         <li> A statement signed by a licensed physician attesting that you have a permanent physical, mental, or sensory impairment that substantially limits one or more major life activities, and stating the nature of the impairment; or</li>
